# Wavefront-Path-Tracer

./: CMakeLists.txt
WavefrontPT.dir/Debug/: Math.ixx.ifc.dt.d.json  Math.ixx.ifc.dt.module.json  Math.ixx.ifc.dt.module.json.command
src/Private/: Functions.cpp  IntegratorOps.cpp  Integrators.cpp  Intersection.cpp  Main.cpp  Math.cpp  Math.inl  Matrix.cpp  Memory.cpp  Payload.cpp  RaySphereIntersection.cpp  Scene.cpp  Transcendentals.cpp  Transform.cpp  TransformIntrin.cpp  WMath.cpp
src/Public/: Allocator.h  Core.h  FileOutput.h  Functions.h  GPlane.h  GSphere.h  IntegratorMathCore.h  IntegratorOps.h  Integrators.h  Intersection.h  Material.h  Math.h  Matrix.h  Memory.h  MemoryAllocators.h  Payload.h  Queue.h  RaySphereIntersection.h  Scene.h  Transcendentals.h  Transform.h  TransformIntrin.h  WMath.h  WMath.inl
